# afw

./: .cursorrules  .gitignore  ARC.md  ARIARUNTIME.MD  ARIARUNTIME.md  AUTH.md  BUG.md  BUNDLEFIX.md  COMPILERFIX.md  CONTAINERRUNTIME.MD  CTXPLAN.md  Cargo.toml  FIX.md  GRADING.md  INTEGRATION.json  INTEGRATIONTODO.md  NEWAPI.md  NEWSDK.md  PMF.md  README.md  cache_06-17-25.md  container_diagnostic_test.rs  database_demo.rs  debug_container.rs  debug_container_minimal  debug_container_minimal.rs  icc_demo.rs  llm_06-15-25.md  metrics_improvement.rs  observability_endpoints.rs  observability_streaming_demo.rs  phase_1_intelligence_test.rs  phase_4_intelligence_test.rs  runtime_06-15-25.md  simple_observability_test.rs  standard_06-15-25.md  test_agent_container_task  test_agent_container_task.rs  test_async_agent_tasks  test_async_agent_tasks.rs  (+3 more)
crates/aria_runtime/: Cargo.toml  README.md  build.rs  generated_server.rs
crates/aria_runtime/proto/: aria.proto
crates/aria_runtime/src/: agents.rs  bundle_discovery.rs  bundle_executor.rs  cache.rs  context.rs  deep_size.rs  errors.rs  lib.rs  memory.rs  observability_streaming_demo.rs  planning.rs  reflection.rs  runtime.rs  teams.rs  tools.rs  types.rs
crates/aria_runtime/src/database/: async_tasks.rs  audit.rs  containers.rs  migrations.rs  mod.rs  schema.rs  sessions.rs  users.rs
crates/aria_runtime/src/engines/: config.rs  context_manager.rs  conversation.rs  execution.rs  icc.rs  mod.rs  observability.rs  observability_endpoints.rs  planning.rs  reflection.rs  streaming.rs  system_prompt.rs  tool_registry.rs
crates/aria_runtime/src/engines/container/: quilt.rs
crates/aria_runtime/src/engines/execution/: tool_resolver.rs
crates/aria_runtime/src/engines/intelligence/: context_builder.rs  endpoints.rs  intelligence_endpoints.rs  learning_engine.rs  manager.rs  mod.rs  pattern_processor.rs  types.rs
crates/aria_runtime/src/engines/llm/: mod.rs  types.rs
crates/aria_runtime/src/engines/llm/providers/: mod.rs  openai.rs
crates/aria_runtime/src/engines/tool_registry/: bundle_integration.rs  mod.rs
crates/aria_runtime/src/grpc/: bundle_service.rs  container_service.rs  mod.rs  notification_service.rs  session_service.rs  task_service.rs
crates/aria_runtime/src/tools/: mod.rs
crates/aria_runtime/src/tools/container/: create.rs  exec.rs  list.rs  logs.rs  metrics.rs  mod.rs  network_info.rs  network_topology.rs  remove.rs  start.rs  status.rs  stop.rs
crates/aria_runtime/src/tools/management/: custom_tools.rs  mod.rs
crates/aria_runtime/src/tools/standard/: create_plan.rs  mod.rs  parse_document.rs  ponder.rs  read_file.rs  web_search.rs  write_code.rs  write_file.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/hostfx/: Cargo.toml
crates/hostfx/src/: lib.rs
crates/orc/: Cargo.toml
crates/orc/src/: lib.rs
crates/pkg_store/: Cargo.toml
crates/pkg_store/src/: bundle.rs  lib.rs
crates/quilt/: .gitignore  Cargo.toml  README.md  build-container.sh  build.rs  flake.nix
crates/quilt/.cargo/: config.toml
crates/quilt/proto/: quilt.proto
crates/quilt/src/: bun_controller.rs  bundle_runtime.rs  lib.rs  main.rs
crates/quilt/src/cli/: containers.rs  icc.rs  main.rs  mod.rs
crates/quilt/src/daemon/: cgroup.rs  manager.rs  mod.rs  namespace.rs  readiness.rs  resource.rs  runtime.rs  system.rs
crates/quilt/src/icc/: dns.rs  messaging.rs  mod.rs  network.rs
crates/quilt/src/sync/: README.md  async_tasks.rs  cleanup.rs  connection.rs  containers.rs  engine.rs  error.rs  mod.rs  monitor.rs  network.rs  schema.rs
crates/quilt/src/utils/: command.rs  console.rs  filesystem.rs  image.rs  locking.rs  mod.rs  process.rs  validation.rs
crates/state_store/: Cargo.toml
crates/state_store/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/token_api/: Cargo.toml
crates/token_api/src/: lib.rs
crates/vec_cache/: Cargo.toml
crates/vec_cache/src/: lib.rs
new-docs/: AGENTICFIRMWARE.md  ARC.md  ARIAFW-v1.md  NEWUSAGE.md  SYNTAX.md  aria-v1.md
src/: main.rs
test_grpc/: Cargo.toml
test_grpc/src/: main.rs
tests/: Cargo.toml  bundle_integration_test.rs  engine_test.rs  tool_test.rs
tests/src/: lib.rs
