[workspace]
members = [
    "crates/aria_runtime",
    "crates/crypto",
    "crates/hostfx",
    "crates/orc",
    "crates/pkg_store",
    "crates/quilt",
    "crates/state_store",
    "crates/telemetry",
    "crates/token_api",
    "crates/vec_cache",
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Serialization & data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for LLM providers
reqwest = { version = "0.11", features = ["json"] }

# Crypto (NEVER roll your own)
blake3 = "1.5"
ed25519-dalek = "2.1" 
chacha20poly1305 = "0.10"

# System interfaces
libc = "0.2"
nix = "0.29"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC (keeping tonic as discussed)
tonic = "0.10"
prost = "0.12"

# Build dependencies
[workspace.dependencies.prost-build]
version = "0.12"

[workspace.dependencies.tonic-build]
version = "0.10"

[package]
name = "aria-fw"
version = "0.1.0"
edition = "2021"
description = "Aria Firmware - Agentic Runtime"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }

# Our custom crates
aria_runtime = { path = "crates/aria_runtime" }
orc = { path = "crates/orc" }
token_api = { path = "crates/token_api" }  
state_store = { path = "crates/state_store" }
vec_cache = { path = "crates/vec_cache" }
pkg_store = { path = "crates/pkg_store" }
hostfx = { path = "crates/hostfx" }
telemetry = { path = "crates/telemetry" }
crypto = { path = "crates/crypto" }
quilt = { path = "crates/quilt" }

tonic = { version = "0.11.0", features = ["transport"] }

# Additional dependencies for testing
axum = "0.7"
tower = "0.4"

[[bin]]
name = "aria-fw"
path = "src/bin/aria-fw.rs"

[[bin]]
name = "aria-cli"
path = "src/bin/aria-cli.rs"

[[bin]]
name = "runtime-demo"
path = "script.rs"

[[bin]]
name = "container-test"
path = "script4.rs"

[[bin]]
name = "conversational-container-test"
path = "script5.rs"

[[bin]]
name = "nested-container-test"
path = "script6.rs"

[[bin]]
name = "agent-container-test"
path = "script7.rs"

[[bin]]
name = "test-foreign-key-fix"
path = "test_foreign_key_fix.rs"

[[bin]]
name = "debug-container"
path = "debug_container.rs"

[[bin]]
name = "test_async_agent_tasks"
path = "test_async_agent_tasks.rs"

[[bin]]
name = "phase_2_pattern_learning_test"
path = "phase_2_pattern_learning_test.rs"

[[bin]]
name = "phase_3_context_tree_test"
path = "phase_3_context_tree_test.rs"

[[bin]]
name = "phase_4_intelligence_test"
path = "phase_4_intelligence_test.rs"
