[package]
name = "test_grpc_upload"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "test_grpc_upload"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.10.1"
blake3 = "1.5.0"
serde_json = "1.0"
zip = "0.6.6"
walkdir = "2" 