[package]
name = "aria-runtime-tests"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace table to make this package independent

[dependencies]
aria_runtime = { path = "../crates/aria_runtime" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] } 