[package]
name = "aria_runtime"
version = "0.1.0"
edition = "2021"
description = "Core Aria runtime"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling  
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Internal crypto for signatures
blake3 = { workspace = true }

# HTTP client
reqwest = { workspace = true }
anyhow = { workspace = true }

# Stream support
tokio-stream = "0.1"

# Regex for parameter resolution
regex = "1.10" 