[package]
name = "aria_runtime"
version = "0.1.0"
edition = "2021"
description = "Core Aria runtime"

[[bin]]
name = "runtime-demo"
path = "../../script.rs"

[[bin]]
name = "multi-tool-demo"
path = "../../script2.rs"

[[bin]]
name = "standard-tools-demo"
path = "../../script3.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Memory management
deepsize = { version = "0.2", features = ["derive"] }

# Time handling  
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Internal crypto for signatures
blake3 = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = { workspace = true }

# Stream support
tokio-stream = "0.1"

# Regex for parameter resolution
regex = "1.10"

# Downcast trait objects
downcast-rs = "1.2" 