[package]
name = "aria_runtime"
version = "0.1.0"
edition = "2021"
description = "Core Aria runtime"

[[bin]]
name = "runtime-demo"
path = "../../script.rs"

[[bin]]
name = "multi-tool-demo"
path = "../../script2.rs"

[[bin]]
name = "standard-tools-demo"
path = "../../script3.rs"

[[bin]]
name = "icc-demo"
path = "../../icc_demo.rs"

[[bin]]
name = "database-demo"
path = "../../database_demo.rs"

[[bin]]
name = "observability-streaming-demo"
path = "../../observability_streaming_demo.rs"

[[bin]]
name = "simple-observability-test"
path = "../../simple_observability_test.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Memory management
deepsize = { version = "0.2", features = ["derive"] }

# Time handling  
chrono = { version = "0.4", features = ["serde", "clock"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crypto for signatures
blake3 = { workspace = true }

# HTTP client and server
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = { workspace = true }

# Stream support
tokio-stream = { version = "0.1", features = ["sync"] }

# Regex for parameter resolution
regex = "1.10"

# Downcast trait objects
downcast-rs = "1.2"

# gRPC for Quilt integration
tonic = "0.12.1"
prost = "0.13.1"
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
test-suite = [] 