[package]
name = "quilt"
version = "0.1.0"
edition = "2021"

# Binary targets
[[bin]]
name = "quilt"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
nix = "0.26.1"
uuid = { version = "1.1.2", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
axum = "0.7"
tower = "0.4"
# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
humantime = "2.1"
regex = "1.10"
anyhow = "1.0.75"
rtnetlink = "0.13.0"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
scopeguard = "1.2"
inotify = "0.10"

# Sync engine dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.8"

# Added to reduce debug symbols for dev builds to help with OOM linker errors
[profile.dev]
debug = "line-tables-only" # Or 0 for no debug symbols, or 1 for limited symbols. "line-tables-only" is a good compromise.
strip = "symbols"          # Further reduce size by stripping symbols
