[package]
name = "quilt"
version = "0.1.0"
edition = "2021"

# Binary targets
[[bin]]
name = "quilt"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["net"] }

# gRPC and Protocol Buffers
tonic = "0.11"
prost = "0.12"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# System info
sysinfo = "0.31"

# CLI-specific dependencies
humantime = "2.1"
regex = "1.10"

# Networking and sync
rtnetlink = "0.13.0"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
scopeguard = "1.2"
inotify = "0.10"

# Container runtime dependencies
nix = { version = "0.27.1", features = ["mount", "sched", "fs", "signal", "process", "hostname"] }
tar = "0.4"
flate2 = "1.0"

# Internal dependencies
pkg_store = { path = "../pkg_store" }

# Added dependencies
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
tempfile = "3.8"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

# Added to reduce debug symbols for dev builds to help with OOM linker errors
[profile.dev]
debug = "line-tables-only"
strip = "symbols"
